# scannerKH

./: LICENSE  README.md
scannerKH/: .gitignore  manage.py  pyproject.toml
scannerKH/article/: models.py
scannerKH/article/migrations/: 0001_initial.py
scannerKH/artikel/: admin.py  bnn.py  models.py
scannerKH/artikel/migrations/: 0001_initial.py
scannerKH/bestellung/: admin.py  apps.py  models.py
scannerKH/bestellung/migrations/: 0001_initial.py
scannerKH/grosshaendler/: admin.py  apps.py  models.py
scannerKH/grosshaendler/migrations/: 0001_initial.py
scannerKH/order/: admin.py  models.py
scannerKH/order/migrations/: 0001_initial.py  0002_auto_20200417_1156.py
scannerKH/scanner/: admin.py  models.py  views.py
scannerKH/scanner/migrations/: 0001_initial.py  0002_auto_20200416_2010.py
scannerKH/scannerKH/: asgi.py  settings.py  urls.py  wsgi.py
scannerKH/scannerkh/event_store/: aggregates.py
scannerKH/tests/: test_scannerkh.py
scannerKH/user/migrations/: 0001_initial.py
scannerKH/wholesaler/: admin.py  models.py
scannerKH/wholesaler/migrations/: 0001_initial.py
