[tool.poetry]
name = "scannerKH"
version = "0.1.0"
description = ""
authors = ["Jan Gutsche <7gutsche@informatik.uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.8"
eventsourcing = "^8.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
